--- a/style.css
+++ b/style.css
@@ -8,14 +8,105 @@ header {
   background-color:#B3B3B3;
   text-align:left;
   text-transform: capitalize ;
-  
+  background-size: 48px 48px;
+  background-position:100%
+
+
+}
+.Lis {
+  list-style-type: none;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.Lis li {
+  display: inline-block;
+  font-size: 20px;
+  padding: 20px;
 }
 nav {
-  color:black;
-  background-color:rgba(0, 183, 255, 0.753);
+  color: black;
+  display: inline-block;
+  width: 80%;
 }
+nav img {
+  width: 10%;
+  position: relative;
+  top: 20px;
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: 40% 40%;
+  grid-gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+  justify-content:center;
+  align-items:normal;
+  grid-row-gap: 30px;
+ 
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 80px;
+ 
+}
+
+
+.Parks {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto auto auto auto;
+  grid-gap: 50px;
+  background-color: #2196F3;
+  padding: 10px;
+  justify-content:center;
+  align-items:center;
+  grid-row-gap: 50px;
+ 
+}
+
+.Parks > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 80px;
+  
+  
+}
+
+.flex {
+  display: flex;
+  flex-wrap: wrap; 
+  justify-content: space-between; 
+
+}
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:center;
+  background-color: DodgerBlue;
+}
+
+.img-index{
+	height: 80%;
+  position: top ;
+  left: 0px;
+  width: 100px;
+  float: right;
+
+
+}
+img{
+	width: 100%;
+	height: 100%;
+}
+
+
 main{
-  background-color:yellow;
+  background-color: DodgerBlue;
   font-size: larger;
 
 }
@@ -23,11 +114,11 @@ footer{
   background-color:#B3B3B3;
 
 }
-li {
+/* li {
   display : inline-block;
   padding:10px;
   border-width:50px;
-}
+}*/
 
 h1{
   text-align:center;
@@ -39,8 +130,4 @@ p{
 }
 section{
   background-color:#666666;
-}
-section h2{
-  color:#04254b
-  
 }
